fixed doro buttons not fitting

--- a/doro/doro.css
+++ b/doro/doro.css
@@ -49,7 +49,7 @@ main {
 header h1 {
   text-align: center;
   font-family: "Kosugi_Maru";
-  font-size: 11vw;
+  font-size: 9vw;
   font-size-adjust: auto;
   -webkit-text-stroke-width: 1.5px;
   -webkit-text-stroke-color: black;
